--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Домашка по JS</title>
 </head>
 <body>
-  <div class="parent">
+
+  <h1 class="h1">ДОмашка по JS!</h1>
+  <!-- <div class="parent">
     <div class="child"><p class="title">Введите возраст 1</p></div>
     <div class="child"><p class="title">Введите возраст 2</p></div>
     <div class="child"><p class="title">Введите возраст 3</p></div>
@@ -16,7 +18,7 @@
 
   <div class="parent2">
     <p class="title">Вот вам наш ответ :</p>
-  </div>
+  </div> -->
 </body>
-<!-- <script src="HW_JS.js"></script> -->
+<script src="HW_JS.js"></script>
 </html>
