--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 <body>
 
   <h1 class="h1">ДОмашка по JS!</h1>
+
+  <h2 class="h2">Перевірка виконання пунктів 26-33</h2>
   <!-- <div class="parent">
     <div class="child"><p class="title">Введите возраст 1</p></div>
     <div class="child"><p class="title">Введите возраст 2</p></div>
