--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-  <h1 class="h1">ДОмашка по JS!</h1>
+  <h1 class="h1">Домашка по JS!</h1>
 
-  <h2 class="h2">Перевірка виконання пунктів 26-33. <br> Введіть три значення віку у наступних вікнах</h2>
+  <h2 class="h2">Перевірка виконання пунктів 26-33. <br> Введіть три значення віку у наступних спливаючих вікнах</h2>
   <!-- <div class="parent">
     <div class="child"><p class="title">Введите возраст 1</p></div>
     <div class="child"><p class="title">Введите возраст 2</p></div>
@@ -22,5 +22,5 @@
     <p class="title">Вот вам наш ответ :</p>
   </div> -->
 </body>
-<script src="HW_JS.js"></script>
+<!-- <script src="HW_JS.js"></script> -->
 </html>
