--- a/index.html
+++ b/index.html
@@ -22,5 +22,5 @@
     <p class="title">Вот вам наш ответ :</p>
   </div> -->
 </body>
-<!-- <script src="HW_JS.js"></script> -->
+<script src="HW_JS.js"></script>
 </html>
